--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
   background-color: #FAD9CE;
   font-size: 20px;
   font-family:monospace;
+
 }
 
 header{
@@ -15,6 +16,7 @@ header{
   top:0;
   z-index:2;
   height:5rem;
+
   color:white;
 }
 
@@ -34,4 +36,12 @@ nav{
 
 .nav-list li a{
   text-decoration: underline;
+}
+
+.content{
+  margin:0em 5em;
+}
+
+skills img{
+  height: 3.5em;
 }
