New age adding picture changing about

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
   margin:0px;
-  background-color: #FAD9CE;
+  background-color: white;
   font-size: 20px;
   font-family:monospace;
 
@@ -16,7 +16,8 @@ header{
   top:0;
   z-index:2;
   height:5rem;
-
+  margin:1em;
+  border-radius: 10px;
   color:white;
 }
 
@@ -36,7 +37,44 @@ nav{
 
 .nav-list li a{
   text-decoration: underline;
+  color: white;
 }
+
+.nav-list li a:hover{
+  color: #E04B19;
+  cursor: pointer;
+}
+
+/*.grid{
+  display: grid;
+  border: 1px blue solid;
+  width: 40em;
+  height:20em;
+  grid-template-columns: 60% 40%;
+  grid-template-rows: 8em 8em;
+}*/
+.about-title{
+  display: flex;
+  flex-direction: row;
+
+}
+
+.about-title h1{
+  color:black;
+  font-size: 6.1em;
+  font-weight: 600;
+  font-variant: small-caps;
+  font-family: Made,Helvetica,Arial,sans-serif;
+  width: 60%;
+}
+
+
+.about-title img{
+  height: 25em;
+  align-self: center;
+  margin-left: auto;
+  border-radius: 10px;
+  }
 
 .content{
   margin:0em 5em;
